unpackaged/main/default/objects/Theme_Relation__c/Theme_Relation__c.object-meta.xml
<CustomObject>
    <label>Theme Relation</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Theme Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>