unpackaged/main/default/objects/Theme_Relation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Theme Relations</relationshipLabel>
    <relationshipName>Theme_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>