unpackaged/main/default/objects/Theme_Relation__c/fields/Clip__c.field-meta.xml
<CustomField>
    <fullName>Clip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clip</label>
    <referenceTo>Clip__c</referenceTo>
    <relationshipLabel>Theme Relations</relationshipLabel>
    <relationshipName>Theme_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>