unpackaged/main/default/objects/Theme_Relation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Theme Relations</relationshipLabel>
    <relationshipName>Theme_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>