unpackaged/main/default/objects/Theme_Relation__c/fields/Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Fundraising__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising</label>
    <referenceTo>Fundraising__c</referenceTo>
    <relationshipLabel>Theme Relations</relationshipLabel>
    <relationshipName>Theme_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>