unpackaged/main/default/objects/Theme_Relation__c/fields/Other_Theme__c.field-meta.xml
<CustomField>
    <fullName>Other_Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Theme</label>
    <referenceTo>Theme__c</referenceTo>
    <relationshipLabel>Theme Relations (Other Theme)</relationshipLabel>
    <relationshipName>Theme_Relations1</relationshipName>
    <type>Lookup</type>
</CustomField>