unpackaged/main/default/objects/Theme_Relation__c/fields/Theme_Description__c.field-meta.xml
<CustomField>
    <fullName>Theme_Description__c</fullName>
    <description>Do Not Use</description>
    <inlineHelpText>Do Not Use</inlineHelpText>
    <label>Z_(Do Not Use)_Theme_Description</label>
    <type>TextArea</type>
</CustomField>